--- a/DailyQuotesWebApp/Views/Quotes/Create.cshtml
+++ b/DailyQuotesWebApp/Views/Quotes/Create.cshtml
@@ -46,7 +46,8 @@
     <div class="form-group">
         @Html.LabelFor(model => model.QuoteDate, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.QuoteDate, new { htmlAttributes = new { @class = "form-control" } })
+            
+            @Html.EditorFor(model => model.QuoteDate, new { htmlAttributes = new { @class = "form-control", id="snwnw" } })
             @Html.ValidationMessageFor(model => model.QuoteDate, "", new { @class = "text-danger" })
         </div>
     </div>
@@ -57,6 +58,7 @@
             @Html.ValidationMessageFor(model => model.QuoteDescription, "", new { @class = "text-danger" })
         </div>
     </div>
+
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
@@ -100,5 +102,6 @@
                     console.error(err);
                 });
         }
+
     </script>
 }
